✨ feat(skills and job headline):
- added reactjs to skills
- changed job headline

--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
             <img src="assets/images/skills/typescript.svg" alt="Typescript" class="skills-img" loading="lazy" title="Typescript">
             <img src="assets/images/skills/js.svg" alt="JavaScript" class="skills-img" loading="lazy" title="JavaScript">
             <img src="assets/images/skills/vue.svg" alt="Vue.js" class="skills-img" loading="lazy" title="Vue.js">
+            <img src="assets/images/skills/react.svg" alt="React.js" class="skills-img" loading="lazy" title="React.js">
             <img src="assets/images/skills/vuetify.svg" alt="Vuetify" class="skills-img" loading="lazy" title="Vuetify">
             <img src="assets/images/skills/tailwind.svg" alt="Tailwind CSS" class="skills-img" loading="lazy" title="Tailwind CSS">
             <img src="assets/images/skills/html.svg" alt="HTML" class="skills-img" loading="lazy" title="HTML">
